.common/.drafts/ingress.traefik.one.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsse-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: maintainer.me
      http:
        paths:
          - backend:
              service:
                name: rsse-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
    - http:
        paths:
          - backend:
              service:
                name: rsse-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - maintainer.me
      secretName: secret-tls
---

Один Ingress (rsse-app-ingress) включает оба вида трафика
Эта конфигурация разрешает трафик по HTTPS с именем maintainer.me 
и по HTTP с доступом без указания конкретного хоста (включая доступ по IP)
