.common/.drafts/ingress.traefik.ru.redirect.yml
# после применения отвалился сертификат в Chrome
apiVersion: traefik.io/v1alpha1
# kubectl get crd
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# notefinder.ru:80 -> редирект на https
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsse-app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: notefinder.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rsse-app-service
                port:
                  number: 5000
---
# notefinder.ru:443
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsse-app-ingress-https
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: notefinder.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rsse-app-service
                port:
                  number: 5000
  tls:
    - hosts:
        - notefinder.ru
      secretName: secret-tls-ru
